fix: make navbar exactly 60px on mobile

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,7 +5,7 @@
   z-index: 9999;
   transition: background-color 0.4s ease-out, font-size 0.1s ease, height 0.15s ease,
     top 0.4s ease-out;
-  padding: 11px 1rem;
+  padding: 2.48px 1rem;
   @media screen and (min-width: 768px) {
     height: 60px;
   }
